Se añade funcionalidad del modificar categoriasy cargar lista categorias

--- a/src/main/resources/ventanas/Categorias_ventanas.html
+++ b/src/main/resources/ventanas/Categorias_ventanas.html
@@ -18,7 +18,7 @@
       <vaadin-button plain-text _id="atras">
         Atrás 
       </vaadin-button>
-      <vaadin-button plain-text _id="crear_categoria_button">
+      <vaadin-button plain-text _id="modificar">
         Modificar 
       </vaadin-button>
      </vaadin-horizontal-layout>
