--- a/src/main/resources/ventanas/Lista_categorias_ventanas.html
+++ b/src/main/resources/ventanas/Lista_categorias_ventanas.html
@@ -7,10 +7,14 @@
  </head>
  <body>
   <vaadin-vertical-layout>
-   <vaadin-label plain-text _id="lista_categorias">
-     Lista categorias: 
+   <vaadin-label plain-text>
+     Listado de categorias a Modificar 
    </vaadin-label>
-   <vaadin-list-select data-item-type="ventanas.Categorias_ventanas"></vaadin-list-select>
+   <vaadin-vertical-layout size-auto margin="false" _id="vetical">
+    <vaadin-panel size-auto _id="panel">
+     <vaadin-form-layout size-auto margin _id="formLayout"></vaadin-form-layout>
+    </vaadin-panel>
+   </vaadin-vertical-layout>
   </vaadin-vertical-layout>
  </body>
 </html>
