--- a/src/main/resources/ventanas/Crear_categoria_ventanas.html
+++ b/src/main/resources/ventanas/Crear_categoria_ventanas.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
   <meta name="vaadin-version" content="8.0.5">
+  <meta name="package-mapping" content="ventanas:ventanas">
  </head>
  <body>
   <vaadin-vertical-layout>
@@ -24,9 +25,7 @@
    </vaadin-form-layout>
    <vaadin-vertical-layout size-auto margin="false" _id="vetical" :center>
     <vaadin-form-layout size-auto margin="false" _id="formLayout">
-     <vaadin-button style-name="link" plain-text>
-       Button 
-     </vaadin-button>
+     <ventanas-lista_categorias></ventanas-lista_categorias>
     </vaadin-form-layout>
    </vaadin-vertical-layout>
   </vaadin-vertical-layout>
