se añade scroll

--- a/src/main/resources/ventanas/Buscador_ventanas.html
+++ b/src/main/resources/ventanas/Buscador_ventanas.html
@@ -8,14 +8,14 @@
  </head>
  <body>
   <vaadin-vertical-layout size-full>
-   <vaadin-vertical-layout size-auto margin="false" _id="vertical">
+   <vaadin-vertical-layout width="80%" height="95%" margin="false" _id="vertical">
     <vaadin-vertical-layout spacing="false" size-auto margin="false" _id="vertical2">
      <ventanas-cabecera_buscador></ventanas-cabecera_buscador>
      <vaadin-label plain-text>
        El resultado de la busquda: 
      </vaadin-label>
     </vaadin-vertical-layout>
-    <vaadin-panel _id="panel">
+    <vaadin-panel width="60%" height="90%" _id="panel">
      <vaadin-form-layout size-auto margin _id="formLista">
       <ventanas-video_ventanas></ventanas-video_ventanas>
       <ventanas-video_ventanas></ventanas-video_ventanas>
