Se solucionan pequeños defectos de ventanas,y de metodos

--- a/src/main/resources/ventanas/Listado_suscripciones_visitante_ventanas.html
+++ b/src/main/resources/ventanas/Listado_suscripciones_visitante_ventanas.html
@@ -10,10 +10,7 @@
   <vaadin-vertical-layout>
    <vaadin-form-layout size-auto margin="false" :center>
     <vaadin-label plain-text _id="titulo">
-      Listado de suscripciones de usuario x 
-    </vaadin-label>
-    <vaadin-label plain-text _id="subtitulo">
-      Usuarios a los que sigue x: 
+      Listado de suscripciones 
     </vaadin-label>
     <vaadin-panel width-auto height="400px">
      <vaadin-form-layout size-auto margin="false" _id="form">
